Closed Bug 1764477 Opened 2 years ago Closed 2 years ago

In-band color depth changes in VP9 and AV1 don't apply correctly, causing green or magenta output.

Categories

(Core :: Audio/Video: Playback, defect)

Desktop
All
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox101 --- fixed

People

(Reporter: Zaggy1024, Assigned: Zaggy1024)

Details

Attachments

(4 files)

When a keyframe sample in VP9 or a sequence header in AV1 changes the bit depth of the video, the change isn't propagated correctly to the displayed image.

The attached webm file contains two sequences, both .5 seconds long. The first is encoded in yuv420 8-bit, the second in yuv420 10-bit. When playback reaches the second sequence, the video becomes green.

Attached image correct_last_frame.png

Previously, AsyncImagePipelineManager::UpdateImageKeys did not check bit depth when updating image keys, and WebRenderTextureHost did not correctly wrap GetColorDepth(). This caused the configuration not to correctly update.

Assignee: nobody → Zaggy1024
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8b5ff05b3fa1
Fix propagation of video bit depth changes to the output. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: