Bug 1764477 - Fix propagation of video bit depth changes to the output. r=aosmond

Previously, AsyncImagePipelineManager::UpdateImageKeys did not check bit depth when updating image keys, and WebRenderTextureHost did not correctly wrap GetColorDepth(). This caused the configuration not to correctly update.

Differential Revision: https://phabricator.services.mozilla.com/D143558